# crisis-logistics-env

./: .gitignore  README.md
crisis_logistics_env/: .gitignore  Dockerfile  MINI_BLOG_OR_VIDEO_SCRIPT.md  PHASE2_SUBMISSION.md  README.md  __init__.py  client.py  graders.py  gym_env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_engine.py  train_and_evaluate.py  train_grpo.py
crisis_logistics_env/artifacts/: benchmark_summary.json  reward_curves.csv
crisis_logistics_env/notebooks/: Copy_of_logiflow_grpo_colab.ipynb  logiflow_grpo_colab (1).ipynb  logiflow_grpo_colab.ipynb  setup.py  train_grpo_t4_colab.ipynb
crisis_logistics_env/outputs/logiflow-grpo-script/: README.md
crisis_logistics_env/outputs/logiflow-grpo-script/artifacts/: evaluation_after.csv  evaluation_before.csv  evaluation_summary.csv  evaluation_summary.json  improvement.json
crisis_logistics_env/outputs/logiflow-grpo-script/checkpoint-140/: rng_state.pth  scheduler.pt  trainer_state.json
crisis_logistics_env/outputs/logiflow-grpo-script/checkpoint-70/: rng_state.pth  scheduler.pt  trainer_state.json
crisis_logistics_env/server/: Dockerfile  __init__.py  app.py  crisis_logistics_env_environment.py  requirements.txt
crisis_logistics_env/visualisation/: logiflow_visualizer.html
